# OpenRGB

./: CMakeLists.txt
cmake/: FindHIDAPI.cmake  FindLibUSB.cmake
net_port/: CMakeLists.txt
serial_port/: CMakeLists.txt
super_io/: CMakeLists.txt
